--- a/home/package.json
+++ b/home/package.json
@@ -1,8 +1,8 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "tailwindcss": "^3.3.5"
   },
   "scripts": {
-    "tailwind": "npx tailwindcss -i tailwind/style.css -o styles/main.css -w"
+    "tailwind":"npx tailwindcss -i tailwind/style.css -o styles/main.css -w"
   }
 }
